--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -1,5 +1,5 @@
 $header-color: #8dd6e3;
-$header-text-color: #808080;
+$header-text-color: #5a5a5a;
 
 @mixin flex($dir, $justify, $align) {
   display: flex;
