--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,5 +1,17 @@
 @import "./config";
 
+/* font family */
+@font-face {
+  font-family: "Yekan";
+  src: url("https://cdn.fontcdn.ir/Font/Persian/Yekan/Yekan.eot");
+  src: url("https://cdn.fontcdn.ir/Font/Persian/Yekan/Yekan.eot?#iefix")
+      format("embedded-opentype"),
+    url("https://cdn.fontcdn.ir/Font/Persian/Yekan/Yekan.woff") format("woff"),
+    url("https://cdn.fontcdn.ir/Font/Persian/Yekan/Yekan.ttf")
+      format("truetype");
+  font-weight: normal;
+}
+
 * {
   transition: 700ms ease;
 }
@@ -13,6 +25,8 @@ body {
   width: 100vw;
   min-height: 100vh;
   max-height: max-content;
+  position: relative;
+  font-family: Yekan, sans-serif;
 }
 
 #main-header {
@@ -44,28 +58,102 @@ body {
     }
   }
 
-  & nav[bottom-nav] {
-    padding: 0 2rem;
+  div {
     background-color: $header-color;
+    padding: 0 2rem;
     button {
       border: none;
       background: transparent;
     }
     @include flex(row, space-between, center);
+
+    nav[menu] {
+      position: absolute;
+      right: 0;
+      top: 0;
+      background-color: #fff;
+      width: 100%;
+      height: 100%;
+
+      button[close-menu-btn] {
+        img {
+          width: 2rem;
+        }
+        float: left;
+        margin: 1rem;
+      }
+
+      a,
+      span {
+        text-decoration: none;
+        font-size: 1rem;
+        color: $header-text-color;
+        font-size: 0.8rem;
+      }
+
+      & > ul {
+        padding: 1rem;
+        margin-top: 2.5rem;
+      }
+      ul > li {
+        padding: 1.5rem 2rem;
+        border-bottom: 1px solid lightgray;
+        cursor: pointer;
+        transition: ease 200ms;
+
+        &:hover {
+          background-color: $header-color;
+        }
+      }
+      li[services-item] {
+        ul {
+          display: none;
+        }
+      }
+    }
   }
+}
+
+.minimize-menu {
+  transform: scale(0);
+}
+.maximize-menu {
+  transform: scale(1);
 }
 
 // controlling each screen size:
 @media (min-width: 768px) {
   #main-header {
-    & nav[top-nav] {
+    nav[top-nav] {
       padding-right: 2rem;
       ul {
         justify-content: flex-start;
       }
     }
-    & nav[bottom-nav] button {
-      transform: scale(0);
+    div button {
+      display: none;
+    }
+
+    nav[menu] {
+      position: relative !important;
+      width: 100%;
+      height: 100%;
+      transform: scale(1);
+      background-color: transparent !important;
+      order: 1;
+
+      & > ul {
+        @include flex(row, center, center);
+        margin-top: 0 !important;
+      }
+      ul > li {
+        padding: 0.5rem !important;
+        border: none !important;
+        span,
+        a {
+          color: #000;
+        }
+      }
     }
   }
 }
