--- a/css/home.css
+++ b/css/home.css
@@ -17,7 +17,6 @@ button {
 }
 
 body {
-  width: 100vw;
   min-height: 100vh;
   max-height: -webkit-max-content;
   max-height: -moz-max-content;
@@ -94,6 +93,7 @@ body {
   background-color: #fff;
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 
 #main-header div nav[menu] button[close-menu-btn] {
@@ -142,6 +142,45 @@ body {
 .maximize-menu {
   -webkit-transform: scale(1);
           transform: scale(1);
+}
+
+#slider-container {
+  position: relative;
+  margin: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#slider-container .slides img {
+  width: 100%;
+}
+
+#slider-container button {
+  position: absolute;
+  background-color: transparent;
+  border: none;
+}
+
+#slider-container button[prev-slide] {
+  left: 0;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+#slider-container .active {
+  display: inline-block;
+}
+
+#slider-container .de-active {
+  display: none;
 }
 
 @media (min-width: 768px) {
