--- a/sass/home.scss
+++ b/sass/home.scss
@@ -22,7 +22,6 @@ button {
 }
 
 body {
-  width: 100vw;
   min-height: 100vh;
   max-height: max-content;
   position: relative;
@@ -74,6 +73,7 @@ body {
       background-color: #fff;
       width: 100%;
       height: 100%;
+      z-index: 1;
 
       button[close-menu-btn] {
         img {
@@ -119,6 +119,32 @@ body {
 }
 .maximize-menu {
   transform: scale(1);
+}
+
+// Styling main element and its children:
+#slider-container {
+  position: relative;
+  margin: 1rem;
+  @include flex(column, center, null);
+  .slides img {
+    width: 100%;
+  }
+  button {
+    position: absolute;
+    background-color: transparent;
+    border: none;
+    &[prev-slide] {
+      left: 0;
+      transform: rotate(180deg);
+    }
+  }
+
+  .active {
+    display: inline-block;
+  }
+  .de-active {
+    display: none;
+  }
 }
 
 // controlling each screen size:
