--- a/sass/home.scss
+++ b/sass/home.scss
@@ -29,8 +29,15 @@ body {
 }
 
 #main-header {
+  // position: sticky;
+  // top: 0;
+  // z-index: 2;
+
   & nav[top-nav] {
     border-bottom: 1px solid lightgray;
+    background-color: #fff;
+    z-index: 10;
+
     ul {
       @include flex(row, center, null);
 
@@ -60,6 +67,8 @@ body {
   div {
     background-color: $header-color;
     padding: 0 2rem;
+    z-index: 10;
+
     button {
       border: none;
       background: transparent;
@@ -73,7 +82,7 @@ body {
       background-color: #fff;
       width: 100%;
       height: 100%;
-      z-index: 1;
+      z-index: 10;
 
       button[close-menu-btn] {
         img {
@@ -133,6 +142,7 @@ body {
     position: absolute;
     background-color: transparent;
     border: none;
+    z-index: 1;
     &[prev-slide] {
       left: 0;
       transform: rotate(180deg);
@@ -144,6 +154,122 @@ body {
   }
   .de-active {
     display: none;
+  }
+
+  .fade {
+    animation: fade 2s ease 0s;
+  }
+}
+
+#middle-tiles {
+  padding: 2rem;
+
+  & > li {
+    position: relative;
+    min-height: 15rem;
+    background-color: $tiles-back-color;
+    border-radius: 25px;
+    margin: 2rem 0;
+
+    header {
+      @include flex(column, center, center);
+
+      h3 {
+        margin-top: 2.7rem;
+      }
+      .tiles-icons {
+        position: absolute;
+        top: -25px;
+        background-color: $middle-tiles-icon-color;
+        border-radius: 50%;
+        width: 3.5rem;
+        height: 3.5rem;
+        @include flex(column, center, center);
+
+        img {
+          width: 30px;
+        }
+      }
+    }
+  }
+
+  &:last-child {
+    & div[news-ico] {
+      background-color: $news-tile-back-color;
+    }
+  }
+
+  a {
+    text-decoration: none;
+    color: #000;
+    font-size: 0.8rem;
+  }
+
+  ul {
+    padding: 2rem;
+
+    li {
+      border-bottom: solid 1px lightgray;
+      padding: 1rem;
+      cursor: pointer;
+      transition: 200ms ease;
+
+      &:hover {
+        background: linear-gradient(
+          -90deg,
+          $header-color 30%,
+          $tiles-back-color 80%
+        );
+      }
+    }
+  }
+
+  & li[enroll] {
+    p {
+      padding: 2rem;
+      font-size: 0.8rem;
+      line-height: 1.5rem;
+    }
+
+    div[buttons] {
+      padding: 0 0 2rem;
+      @include flex(column, center, center);
+
+      button {
+        width: 7rem;
+        padding: 0.5rem 2rem;
+        margin: 0.2rem 0;
+        border-radius: 5px;
+        border: none;
+
+        a {
+          color: #fff;
+          font-size: 0.9rem;
+        }
+
+        &[enroll-btn] {
+          background-color: #ff8919;
+        }
+
+        &[login-btn] {
+          background-color: #01c9ee;
+        }
+
+        &[uni-user-login] {
+          width: max-content;
+          background-color: #ae5756;
+        }
+      }
+    }
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
   }
 }
 
@@ -180,6 +306,14 @@ body {
           color: #000;
         }
       }
+    }
+  }
+
+  #middle-tiles {
+    @include flex(row, center, base-line);
+    & > li {
+      width: 33%;
+      margin: 1rem;
     }
   }
 }
