Add footer and style it, almost everything done.

--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,80 @@
+#main-footer {
+  background-color: #fff;
+  color: #4e4e4e;
+  -webkit-box-shadow: 0 0 5px #7a7a7a;
+          box-shadow: 0 0 5px #7a7a7a;
+  padding: 2rem 2rem 0;
+  margin: 0 0.5rem 1rem;
+  border-radius: 15px;
+}
+
+#main-footer h4 {
+  color: #000;
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
+}
+
+#main-footer a {
+  color: #4e4e4e;
+  text-decoration: none;
+  font-size: 0.85rem;
+}
+
+#main-footer a:hover {
+  text-decoration: underline;
+}
+
+#main-footer div[copyright] {
+  border-top: solid 1px #d1d1d1;
+  padding: 1.5rem 0;
+}
+
+#main-footer > ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#main-footer > ul > li {
+  padding: 1.5rem 0;
+  border-bottom: 1px solid #d1d1d1;
+}
+
+#main-footer > ul > li li {
+  padding: 0.5rem;
+}
+
+#main-footer > ul li[categories] {
+  border: none;
+}
+
+@media (min-width: 768px) {
+  #main-footer {
+    margin: 2rem;
+  }
+  #main-footer > ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  #main-footer > ul > li {
+    padding-left: 2rem;
+    border: none;
+  }
+  #main-footer > ul > li li {
+    border-bottom: solid 1px #d1d1d1;
+    padding: 1rem 0.5rem;
+  }
+}
+
 /* font family */
 @font-face {
   font-family: "Yekan";
