--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -4,6 +4,12 @@ $middle-tiles-icon-color: #d34a4a;
 $tiles-back-color: rgb(245, 245, 245);
 $news-tile-back-color: #4c8cf5;
 
+$footer-bg-color: #fff;
+$footer-texts-color: rgb(78, 78, 78);
+$footer-heading-color: #000;
+$footer-shadow-color: rgb(122, 122, 122);
+$footer-border-color: rgb(209, 209, 209);
+
 @mixin flex($dir, $justify, $align) {
   display: flex;
 
