Solving some problems and alternating slider with links on small screens.

--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -10,6 +10,8 @@ $footer-heading-color: #000;
 $footer-shadow-color: rgb(122, 122, 122);
 $footer-border-color: rgb(209, 209, 209);
 
+$slide-count-color: $footer-border-color;
+
 @mixin flex($dir, $justify, $align) {
   display: flex;
 
