--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -28,6 +28,7 @@
   div[copyright] {
     border-top: solid 1px $footer-border-color;
     padding: 1.5rem 0;
+    font-size: 0.8rem;
   }
 
   & > ul {
