--- a/css/home.css
+++ b/css/home.css
@@ -43,8 +43,44 @@
           animation: fade 2s ease 0s;
 }
 
+#slide-count {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  direction: ltr;
+  position: absolute;
+  bottom: -22px;
+  width: 100%;
+}
+
+#slide-count li:nth-last-child(4) div {
+  background-color: #7a7a7a;
+}
+
+#slide-count li {
+  margin: 0.1rem 0.3rem 0;
+}
+
+#slide-count li div {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: #d1d1d1;
+}
+
 #middle-tiles {
-  padding: 2rem;
+  padding: 2rem 2rem 0;
 }
 
 #middle-tiles > li {
@@ -102,6 +138,10 @@
 }
 
 #middle-tiles:last-child div[news-ico] {
+  background-color: #4c8cf5;
+}
+
+#middle-tiles > li:nth-child(1) > header > div {
   background-color: #4c8cf5;
 }
 
@@ -182,18 +222,26 @@
 @-webkit-keyframes fade {
   from {
     opacity: 0.4;
+    -webkit-transform: scale(0.99);
+            transform: scale(0.99);
   }
   to {
     opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
 @keyframes fade {
   from {
     opacity: 0.4;
+    -webkit-transform: scale(0.99);
+            transform: scale(0.99);
   }
   to {
     opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
@@ -226,6 +274,7 @@
 #main-footer div[copyright] {
   border-top: solid 1px #d1d1d1;
   padding: 1.5rem 0;
+  font-size: 0.8rem;
 }
 
 #main-footer > ul {
@@ -283,8 +332,8 @@
 }
 
 * {
-  -webkit-transition: 700ms ease;
-  transition: 700ms ease;
+  -webkit-transition: 800ms 200ms ease;
+  transition: 800ms 200ms ease;
 }
 
 button {
@@ -345,6 +394,8 @@ body {
   background-color: #8dd6e3;
   padding: 0 2rem;
   z-index: 10;
+  -webkit-transition: 200ms 100ms ease;
+  transition: 200ms 100ms ease;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -365,6 +416,15 @@ body {
   background: transparent;
 }
 
+#main-header div > a {
+  height: 100%;
+}
+
+#main-header div > a img {
+  width: auto;
+  height: 100%;
+}
+
 #main-header div nav[menu] {
   position: absolute;
   right: 0;
@@ -372,7 +432,10 @@ body {
   background-color: #fff;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   z-index: 10;
+  -webkit-transition: 400ms ease;
+  transition: 400ms ease;
 }
 
 #main-header div nav[menu] button[close-menu-btn] {
@@ -393,8 +456,7 @@ body {
 }
 
 #main-header div nav[menu] > ul {
-  padding: 1rem;
-  margin-top: 2.5rem;
+  margin-top: 3.3rem;
 }
 
 #main-header div nav[menu] ul > li {
@@ -414,16 +476,40 @@ body {
 }
 
 .minimize-menu {
-  -webkit-transform: scale(0);
-          transform: scale(0);
+  width: 0 !important;
 }
 
 .maximize-menu {
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  width: 100%;
+}
+
+@media (max-width: 425px) {
+  #main-header > div {
+    margin: 0;
+    padding: 0;
+  }
+  #main-header > div > a {
+    height: 60%;
+  }
+  #open-menu-btn {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+}
+
+@media (max-width: 767px) {
+  #slider-container {
+    display: none;
+  }
 }
 
 @media (min-width: 768px) {
+  #main-header {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+  }
   #main-header nav[top-nav] {
     padding-right: 2rem;
   }
@@ -438,13 +524,25 @@ body {
   #main-header nav[menu] {
     position: relative !important;
     width: 100%;
-    height: 100%;
     -webkit-transform: scale(1);
             transform: scale(1);
     background-color: transparent !important;
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #main-header nav[menu] > ul {
     display: -webkit-box;
@@ -488,6 +586,9 @@ body {
   #middle-tiles > li {
     width: 33%;
     margin: 1rem;
+  }
+  #middle-tiles > li:nth-child(1) {
+    display: none;
   }
 }
 /*# sourceMappingURL=home.css.map */
