--- a/sass/home.scss
+++ b/sass/home.scss
@@ -15,7 +15,7 @@
 }
 
 * {
-  transition: 700ms ease;
+  transition: 800ms 200ms ease;
 }
 
 button {
@@ -31,10 +31,6 @@ body {
 }
 
 #main-header {
-  // position: sticky;
-  // top: 0;
-  // z-index: 2;
-
   & nav[top-nav] {
     border-bottom: 1px solid lightgray;
     background-color: #fff;
@@ -70,12 +66,22 @@ body {
     background-color: $header-color;
     padding: 0 2rem;
     z-index: 10;
+    transition: 200ms 100ms ease;
+    @include flex(row, space-between, center);
 
     button {
       border: none;
       background: transparent;
     }
-    @include flex(row, space-between, center);
+
+    & > a {
+      height: 100%;
+
+      img {
+        width: auto;
+        height: 100%;
+      }
+    }
 
     nav[menu] {
       position: absolute;
@@ -84,7 +90,9 @@ body {
       background-color: #fff;
       width: 100%;
       height: 100%;
+      overflow: hidden;
       z-index: 10;
+      transition: 400ms ease;
 
       button[close-menu-btn] {
         img {
@@ -103,8 +111,7 @@ body {
       }
 
       & > ul {
-        padding: 1rem;
-        margin-top: 2.5rem;
+        margin-top: 3.3rem;
       }
       ul > li {
         padding: 1.5rem 2rem;
@@ -126,15 +133,40 @@ body {
 }
 
 .minimize-menu {
-  transform: scale(0);
+  width: 0 !important;
 }
 .maximize-menu {
-  transform: scale(1);
+  width: 100%;
 }
 
 // controlling each screen size:
+@media (max-width: 425px) {
+  #main-header > div {
+    margin: 0;
+    padding: 0;
+
+    & > a {
+      height: 60%;
+    }
+  }
+
+  #open-menu-btn {
+    transform: scale(0.8);
+  }
+}
+
+@media (max-width: 767px) {
+  #slider-container {
+    display: none;
+  }
+}
+
 @media (min-width: 768px) {
   #main-header {
+    position: sticky;
+    top: 0;
+    z-index: 2;
+
     nav[top-nav] {
       padding-right: 2rem;
       ul {
@@ -148,10 +180,10 @@ body {
     nav[menu] {
       position: relative !important;
       width: 100%;
-      height: 100%;
       transform: scale(1);
       background-color: transparent !important;
       order: 1;
+      @include flex(row, center, center);
 
       & > ul {
         @include flex(row, center, center);
@@ -174,5 +206,9 @@ body {
       width: 33%;
       margin: 1rem;
     }
+  }
+
+  #middle-tiles > li:nth-child(1) {
+    display: none;
   }
 }
