--- a/sass/home.scss
+++ b/sass/home.scss
@@ -179,7 +179,7 @@ body {
 
     nav[menu] {
       position: relative !important;
-      width: 100%;
+      width: 100% !important;
       transform: scale(1);
       background-color: transparent !important;
       order: 1;
